--- a/新人研修_プログラミングの基礎とデータの可視化.ipynb
+++ b/新人研修_プログラミングの基礎とデータの可視化.ipynb
@@ -45,7 +45,9 @@
         "colab_type": "text"
       },
       "source": [
-        "- プログラムとは\n",
+        "## アジェンダ\n",
+        "\n",
+        "- プログラムとは？\n",
         "- こんにちは世界\n",
         "- 変数\n",
         "- 条件分岐\n",
@@ -62,8 +64,10 @@
         "colab_type": "text"
       },
       "source": [
-        "## **プログラムとは？**\n",
-        "●●"
+        "# **プログラムとは？**\n",
+        "> コンピュータに対する命令（処理）を記述したもの\n",
+        "\n",
+        "[Wikipedia:プログラム（コンピュータ）](https://ja.wikipedia.org/wiki/%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0_(%E3%82%B3%E3%83%B3%E3%83%94%E3%83%A5%E3%83%BC%E3%82%BF))"
       ]
     },
     {
@@ -73,9 +77,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## **こんにちは世界**\n",
-        "すべてのプログラミングはここからはじまる\n",
-        "hello world"
+        "# **こんにちは世界！**\n",
+        "すべてのプログラミングはこの文からはじまります。"
       ]
     },
     {
@@ -98,45 +101,49 @@
         "colab_type": "text"
       },
       "source": [
-        "## **変数**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Kx6oQAzrbaUc",
-        "colab_type": "text"
-      },
-      "source": [
-        "- ●●\n",
-        "- ▼▼"
+        "# **変数**\n",
+        "\n",
+        "名前をつけたデータのこと"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ArT_xRuWJxvc",
+        "id": "Dwd20uWQyWwA",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "07770c97-2080-4655-d31f-f5bb1c4588ab"
+        "colab": {}
       },
       "source": [
-        "greeting = '今日は天気が良いですね'\n",
-        "print(greeting)"
+        "fusion = 'direct marketing agency.'"
       ],
-      "execution_count": 110,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "今日は天気が良いですね\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_wiHSrdYyefY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "fusion = 'marketing company.'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VNUgYyT3yo23",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print('FUSION is ' + fusion)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -174,11 +181,11 @@
       "metadata": {
         "id": "KPpS3HG6KNP2",
         "colab_type": "code",
+        "outputId": "54cf2e4d-2800-4510-ee64-e6059a17213a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "54cf2e4d-2800-4510-ee64-e6059a17213a"
+        }
       },
       "source": [
         "price = 12000\n",
@@ -187,7 +194,7 @@
         "else:\n",
         "  print('買える！')"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,18 +242,17 @@
       "metadata": {
         "id": "nsQpu0TZKxX8",
         "colab_type": "code",
+        "outputId": "18b14b4c-ff68-4a87-e9d4-40aa8cc11c56",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "outputId": "18b14b4c-ff68-4a87-e9d4-40aa8cc11c56"
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "week = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']\n",
         "for day in week:\n",
         "  print(day)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,16 +311,15 @@
       "metadata": {
         "id": "pw08hmG7MYM3",
         "colab_type": "code",
+        "outputId": "fe6c2f47-a78c-4ad0-9a3a-4c1da8804b99",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "outputId": "fe6c2f47-a78c-4ad0-9a3a-4c1da8804b99"
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "zac(9, 18)"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,18 +451,18 @@
       "metadata": {
         "id": "pVqCPgybTiad",
         "colab_type": "code",
+        "outputId": "2d75e20d-8f2e-4e97-976d-215f38c3c379",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 207
-        },
-        "outputId": "2d75e20d-8f2e-4e97-976d-215f38c3c379"
+        }
       },
       "source": [
         "v1 = Car('v1', 5000, 'tesla', 'black')\n",
         "print(v1.accelerate(5))\n",
         "print(v1.decelerate(1))"
       ],
-      "execution_count": 111,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -489,11 +494,10 @@
       "metadata": {
         "id": "HJVWN8qStf5o",
         "colab_type": "code",
+        "outputId": "fabec88c-84a3-47ed-f981-2241ab05e928",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "outputId": "fabec88c-84a3-47ed-f981-2241ab05e928"
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!pip install japanize-matplotlib\n",
@@ -501,7 +505,7 @@
         "import matplotlib.pyplot as plt\n",
         "import japanize_matplotlib"
       ],
-      "execution_count": 87,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -635,14 +639,13 @@
         "colab_type": "code",
         "outputId": "708a1ce4-2226-48ca-a51d-c9697feeca09",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "display_graph('コロナ前後におけるチカホの人流', '時間', '人流', '合計', 'J4', '2019-03-11', '2020-03-09')"
       ],
-      "execution_count": 107,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
