--- a/新人研修_プログラミングの基礎とデータの可視化.ipynb
+++ b/新人研修_プログラミングの基礎とデータの可視化.ipynb
@@ -152,17 +152,9 @@
         "colab_type": "text"
       },
       "source": [
-        "## **条件分岐**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "x2GyqXNfbjkS",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
+        "# **条件分岐**\n",
+        "\n",
+        "条件によって処理を変えたいときに使う"
       ]
     },
     {
@@ -172,8 +164,30 @@
         "id": "w4HCQX1vbj3e"
       },
       "source": [
-        "- ●●\n",
-        "- ▼▼"
+        "- ウォーターサーバの**水がなくなったら**汲みに行く\n",
+        "- ビルの**最終退出者なら**SECOMを設定する\n",
+        "- **20歳以下なら**飲酒はできない\n",
+        "- **20歳以上なら**お酒を提供できる\n",
+        " "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JxQkbvWs-8WP",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 書式\n",
+        "\n",
+        "```\n",
+        "if 条件式:\n",
+        "    処理\n",
+        "elif 条件式:\n",
+        "    処理\n",
+        "else:\n",
+        "    処理\n",
+        "```"
       ]
     },
     {
@@ -181,38 +195,120 @@
       "metadata": {
         "id": "KPpS3HG6KNP2",
         "colab_type": "code",
-        "outputId": "54cf2e4d-2800-4510-ee64-e6059a17213a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
-        "price = 12000\n",
-        "if price > 15000:\n",
-        "  print('高くて買えない！')\n",
+        "sneaker_price = 20000\n",
+        "\n",
+        "if sneaker_price > 15000:\n",
+        "  print('高い！')\n",
         "else:\n",
-        "  print('買える！')"
+        "  print('買えるかも！')"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "買える！\n"
-          ],
-          "name": "stdout"
-        }
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "JQ4YZ57M13tZ",
+        "colab": {}
+      },
+      "source": [
+        "sneaker_price = 20000\n",
+        "\n",
+        "discount_rate = 0.6\n",
+        "sneaker_price = sneaker_price * discount_rate\n",
+        "\n",
+        "if sneaker_price > 15000:\n",
+        "  print('高い！')\n",
+        "else:\n",
+        "  print('買えるかも！')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EL8zA4Cn9o2q",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 演算子\n",
+        "\n",
+        "## 代表的な演算子\n",
+        "\n",
+        "### 比較演算子\n",
+        "```\n",
+        "a == b           # a が b と等しい\n",
+        "a != b           # a が b と異なる\n",
+        "a < b            # a が b よりも小さい\n",
+        "a > b            # a が b よりも大きい\n",
+        "a <= b           # a が b 以下である\n",
+        "a >= b           # a が b 以上である\n",
+        "```\n",
+        "\n",
+        "### 算術演算子\n",
+        "```\n",
+        "a + b         # 加算\n",
+        "a - b         # 減算\n",
+        "a * b         # 乗算\n",
+        "a / b         # 除算\n",
+        "a % b         # a を b で割った余り\n",
+        "```\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zKkHiveXbfcu",
+        "id": "SO5HtSmx6TlQ",
         "colab_type": "text"
       },
       "source": [
-        ""
+        "### 問題\n",
+        "\n",
+        "自分の快適な温度はどれくらいですか？\n",
+        "温度によって「寒い！」「快適！」「暑い！」と出力するプログラムを開発してください。（回答時間は15分です）\n",
+        "\n",
+        "ヒント\n",
+        "- 条件は3つになります\n",
+        "- if / else以外にelifを使って表現しましょう\n",
+        "- 比較演算子を使いましょう\n",
+        "- 快適温度を変数として、それにいろんな値を入れて出力される文字が変わることを確認しましょう"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zul17YoK8sHR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "outputId": "20549feb-80a0-48f8-ea16-b3e27480c1bb"
+      },
+      "source": [
+        "temp = 26\n",
+        "\n",
+        "if temp <= 15:\n",
+        "  print('寒い！')\n",
+        "elif 16 <= temp <= 25:\n",
+        "  print('快適！')\n",
+        "else:\n",
+        "  print('暑い！')"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "暑い！\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -223,7 +319,8 @@
       },
       "source": [
         "## **繰り返し**\n",
-        "なにを何回繰り返す"
+        "\n",
+        "同じ処理を何度も繰り返す"
       ]
     },
     {
@@ -233,8 +330,32 @@
         "id": "7xsK_4hhbgH9"
       },
       "source": [
-        "- ●●\n",
-        "- ▼▼"
+        "- デザインを5回チェックする\n",
+        "- トランプがなくなるまで参加者へ1枚ずつ配る"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rd83lMv6_yyR",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 書式\n",
+        "\n",
+        "```\n",
+        "for 変数 in 配列:\n",
+        "    処理\n",
+        "```\n",
+        "\n",
+        "### 配列とは\n",
+        "複数の要素がある変数\n",
+        "\n",
+        "例\n",
+        "```\n",
+        "odd_number = [1, 3, 5, 7, 9]\n",
+        "prefecture = ['北海道', '青森県', '秋田県', ....., '沖縄県']\n",
+        "```\n"
       ]
     },
     {
@@ -242,10 +363,7 @@
       "metadata": {
         "id": "nsQpu0TZKxX8",
         "colab_type": "code",
-        "outputId": "18b14b4c-ff68-4a87-e9d4-40aa8cc11c56",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "colab": {}
       },
       "source": [
         "week = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']\n",
@@ -253,21 +371,43 @@
         "  print(day)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Sun\n",
-            "Mon\n",
-            "Tue\n",
-            "Wed\n",
-            "Thu\n",
-            "Fri\n",
-            "Sat\n"
-          ],
-          "name": "stdout"
-        }
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qRwt-7Ag6BDz",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 問題\n",
+        "\n",
+        "以下のフィボナッチ数列を1行に1つずつ表示するプログラムを開発してください（回答時間は15分です）\n",
+        "\n",
+        "**0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181, 6765, 10946**\n",
+        "\n",
+        "\n",
+        "\n",
+        "ヒント：\n",
+        "- フィボナッチ数列を変数にします(上のweekを参考に）\n",
+        "- 繰り返しを使って1つずつ値を出力しましょう（出力はprint文を使います）"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gOXzXc61_abQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "fib_seq = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181, 6765, 10946]\n",
+        "\n",
+        "for i in fib_seq:\n",
+        "  print(i)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
