--- a/新人研修_プログラミングの基礎とデータの可視化.ipynb
+++ b/新人研修_プログラミングの基礎とデータの可視化.ipynb
@@ -60,6 +60,37 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "MFsfUppsLwpB",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 序：Google Colaboratoryの紹介\n",
+        "\n",
+        "https://colab.research.google.com/notebooks/welcome.ipynb?hl=ja\n",
+        "> Colaboratory（略称: Colab）では、ブラウザから Python を記述し実行できるほか、次の特長を備えています。\n",
+        "> - 構成が不要\n",
+        "- GPU への無料アクセス\n",
+        "- 簡単に共有\n",
+        "\n",
+        "機械学習も試しながら学べる\n",
+        "https://tkrel.com/10041"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZDtSiIJuRdqj",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 序：Pythonの紹介\n",
+        "\n",
+        "- \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ZxNSv3QXJce-",
         "colab_type": "text"
       },
@@ -178,7 +209,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 書式\n",
+        "## 書き方\n",
         "\n",
         "```\n",
         "if 条件式:\n",
@@ -274,9 +305,9 @@
         "\n",
         "ヒント\n",
         "- 条件は3つになります\n",
-        "- if / else以外にelifを使って表現しましょう\n",
+        "- if / elif / elseを使って表現しましょう\n",
         "- 比較演算子を使いましょう\n",
-        "- 快適温度を変数として、それにいろんな値を入れて出力される文字が変わることを確認しましょう"
+        "- 快適温度を変数として、それにいろいろな値を入れて出力される文字が変わることを確認しましょう"
       ]
     },
     {
@@ -318,7 +349,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## **繰り返し**\n",
+        "# **繰り返し**\n",
         "\n",
         "同じ処理を何度も繰り返す"
       ]
@@ -341,7 +372,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 書式\n",
+        "## 書き方\n",
         "\n",
         "```\n",
         "for 変数 in 配列:\n",
@@ -416,7 +447,11 @@
         "colab_type": "text"
       },
       "source": [
-        "## **関数**"
+        "# **関数**\n",
+        "\n",
+        "入力に応じたものを出力する\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -426,8 +461,27 @@
         "id": "5WhzY999bqdz"
       },
       "source": [
-        "- ●●\n",
-        "- ▼▼"
+        "- y=2x\n",
+        "- 自動販売機\n",
+        "\n",
+        "\n",
+        "など"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vN3F67lUDt24",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 書き方\n",
+        "\n",
+        "```\n",
+        "def 関数名(引数):\n",
+        "    処理\n",
+        "    (必要に応じて)戻り値\n",
+        "```"
       ]
     },
     {
@@ -451,35 +505,23 @@
       "metadata": {
         "id": "pw08hmG7MYM3",
         "colab_type": "code",
-        "outputId": "fe6c2f47-a78c-4ad0-9a3a-4c1da8804b99",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "colab": {}
       },
       "source": [
         "zac(9, 18)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "始業時刻:9時\n",
-            "終業時刻:18時\n",
-            "労働時間:9時間\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "S0yB4tGabp8m",
+        "id": "Qa1TfJtBS3_S",
         "colab_type": "text"
       },
       "source": [
-        ""
+        "### 問題\n",
+        "\n"
       ]
     },
     {
@@ -519,23 +561,10 @@
         "    self.lastname = lastname\n",
         "    self.age = age\n",
         "    self.hobby = hobby\n",
-        "    print('姓：' + firstname)\n",
-        "    print('名：' + lastname)\n",
-        "    print('年齢：' + str(age))\n",
-        "    print('趣味：' + hobby)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "S0fUanAqOe7F",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "man = Human('Tom', 'Watson', 42, 'Golf')"
+        "    #print('姓：' + firstname)\n",
+        "    #print('名：' + lastname)\n",
+        "    #print('年齢：' + str(age))\n",
+        "    #print('趣味：' + hobby)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -591,11 +620,7 @@
       "metadata": {
         "id": "pVqCPgybTiad",
         "colab_type": "code",
-        "outputId": "2d75e20d-8f2e-4e97-976d-215f38c3c379",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 207
-        }
+        "colab": {}
       },
       "source": [
         "v1 = Car('v1', 5000, 'tesla', 'black')\n",
@@ -603,19 +628,7 @@
         "print(v1.decelerate(1))"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-111-6e904eef2147>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mv1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'v1'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'tesla'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'black'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maccelerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecelerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'Car' object has no attribute 'accelerate'"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -624,9 +637,17 @@
         "colab_type": "text"
       },
       "source": [
-        "## **プログラミングを体験しよう**\n",
+        "# **プログラミングを体験しよう**\n",
         "\n",
-        "緊急事態宣言が出された2月末から2週間後の月曜のチカホの人流を前年同期と比較する。"
+        "課題：コロナ禍におけるマーケターの重要性をアピールしよう\n",
+        "\n",
+        "- あなたはマーケターです\n",
+        "- クライアントはチカホにあるコーヒー屋さんです\n",
+        "- コーヒー屋の売上の5割は朝の通勤客によるもの\n",
+        "- 新型コロナの影響で、緊急事態宣言が出された2月末から2週間後の月曜の売上が昨年比9割減\n",
+        "- 人の流れが減っただけなのか店側になにか問題があるのか確認したいので、**昨年同時期からどれくらい人の流れが減っているのか調べてほしい**\n",
+        "- この人の流れが今後もしばらく続くとして**どうしたらお店が存続できるか具体的に提案して**ほしい\n",
+        "\n"
       ]
     },
     {
