--- a/新人研修_プログラミングの基礎とデータの可視化.ipynb
+++ b/新人研修_プログラミングの基礎とデータの可視化.ipynb
@@ -47,6 +47,7 @@
       "source": [
         "## アジェンダ\n",
         "\n",
+        "- はじめに\n",
         "- プログラムとは？\n",
         "- こんにちは世界\n",
         "- 変数\n",
@@ -64,7 +65,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# 序：Google Colaboratoryの紹介\n",
+        "# **はじめに：Google Colaboratoryの紹介**\n",
         "\n",
         "https://colab.research.google.com/notebooks/welcome.ipynb?hl=ja\n",
         "> Colaboratory（略称: Colab）では、ブラウザから Python を記述し実行できるほか、次の特長を備えています。\n",
@@ -83,9 +84,15 @@
         "colab_type": "text"
       },
       "source": [
-        "# 序：Pythonの紹介\n",
+        "# **はじめに：Pythonの紹介**\n",
         "\n",
-        "- \n"
+        "https://www.python.jp/pages/about.html\n",
+        "> Python は1990年代初頭ごろから公開されているプログラミング言語で、わかりやすく、実用的な言語として、広く使われ続けています。Pythonはプログラムの「読みやすさ・わかりやすさ」をとても重視していて、Pythonを知らない人でも、理解しやすいようにデザインされています。\n",
+        ">\n",
+        "> もちろん、読みやすさ一辺倒ではなく、実用的で、高い拡張性も備えています。読みやすさ・習得しやすさと、実用性のバランスが、Pythonの大きな魅力といえるでしょう。\n",
+        ">\n",
+        ">Pythonは汎用的なプログラミング言語の利用度調査などでは、常に高い位置を占めています。システム管理やツール・アプリケーション開発・科学技術計算・Webシステムなどで広く利用されてきました。特に、2010年代ごろからの機械学習ブームでは、優れた科学技術計算ツールとして評価され、大きな人気を得ました。\n",
+        "\n"
       ]
     },
     {
@@ -211,7 +218,7 @@
       "source": [
         "## 書き方\n",
         "\n",
-        "```\n",
+        "```python\n",
         "if 条件式:\n",
         "    処理\n",
         "elif 条件式:\n",
@@ -244,13 +251,17 @@
       "metadata": {
         "colab_type": "code",
         "id": "JQ4YZ57M13tZ",
-        "colab": {}
+        "outputId": "077e9e83-752b-4a9c-b0f0-90cff0896d99",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "sneaker_price = 20000\n",
         "\n",
-        "discount_rate = 0.6\n",
-        "sneaker_price = sneaker_price * discount_rate\n",
+        "discount_rate = 60\n",
+        "sneaker_price = sneaker_price * discount_rate / 100\n",
         "\n",
         "if sneaker_price > 15000:\n",
         "  print('高い！')\n",
@@ -258,7 +269,15 @@
         "  print('買えるかも！')"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "買えるかも！\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -315,11 +334,10 @@
       "metadata": {
         "id": "zul17YoK8sHR",
         "colab_type": "code",
+        "outputId": "20549feb-80a0-48f8-ea16-b3e27480c1bb",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "outputId": "20549feb-80a0-48f8-ea16-b3e27480c1bb"
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "temp = 26\n",
@@ -331,7 +349,7 @@
         "else:\n",
         "  print('暑い！')"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,8 +379,8 @@
         "id": "7xsK_4hhbgH9"
       },
       "source": [
-        "- デザインを5回チェックする\n",
-        "- トランプがなくなるまで参加者へ1枚ずつ配る"
+        "- デザインを**5回チェック**する\n",
+        "- **トランプがなくなるまで**参加者へ**1枚ずつ配る**"
       ]
     },
     {
@@ -374,16 +392,22 @@
       "source": [
         "## 書き方\n",
         "\n",
-        "```\n",
+        "```python\n",
         "for 変数 in 配列:\n",
         "    処理\n",
         "```\n",
+        "\n",
+        "```python\n",
+        "while 条件式:\n",
+        "    処理\n",
+        "```\n",
+        "\n",
         "\n",
         "### 配列とは\n",
         "複数の要素がある変数\n",
         "\n",
         "例\n",
-        "```\n",
+        "```python\n",
         "odd_number = [1, 3, 5, 7, 9]\n",
         "prefecture = ['北海道', '青森県', '秋田県', ....., '沖縄県']\n",
         "```\n"
@@ -420,7 +444,7 @@
         "\n",
         "\n",
         "ヒント：\n",
-        "- フィボナッチ数列を変数にします(上のweekを参考に）\n",
+        "- フィボナッチ数列を配列にします(上のweekを参考に）\n",
         "- 繰り返しを使って1つずつ値を出力しましょう（出力はprint文を使います）"
       ]
     },
@@ -477,7 +501,7 @@
       "source": [
         "## 書き方\n",
         "\n",
-        "```\n",
+        "```python\n",
         "def 関数名(引数):\n",
         "    処理\n",
         "    (必要に応じて)戻り値\n",
@@ -492,7 +516,7 @@
         "colab": {}
       },
       "source": [
-        "def zac(starttime, endtime):\n",
+        "def timecard(starttime, endtime):\n",
         "  print('始業時刻:' + str(starttime) + '時')\n",
         "  print('終業時刻:' + str(endtime) + '時')\n",
         "  print('労働時間:' + str(endtime - starttime) + '時間')"
@@ -508,7 +532,7 @@
         "colab": {}
       },
       "source": [
-        "zac(9, 18)"
+        "timecard(9, 18)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -521,7 +545,138 @@
       },
       "source": [
         "### 問題\n",
-        "\n"
+        "\n",
+        "数字を入力すると2倍の値を出力する関数を開発してください（回答時間は15分です）\n",
+        "\n",
+        "ヒント：\n",
+        "- 算術演算子"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3VAFtC2sRb4c",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def double(x):\n",
+        "  print(x * 2)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pxqUH7lnr01-",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 問題\n",
+        "入力した整数が奇数か偶数か教えてくれる関数を開発してください（回答時間は20分です）\n",
+        "\n",
+        "ヒント：\n",
+        "- 奇数と偶数の特徴は？\n",
+        "- もし○○なら偶数、○○なら奇数というように条件分岐をうまく使いましょう"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pYOFEDuts-tx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def check_even_odd(number):\n",
+        "  if number % 2 == 0:\n",
+        "    print('偶数です！')\n",
+        "  else:\n",
+        "    print('奇数です！')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QM_VIzAttNQE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "29aa8e87-afc5-4d91-9b52-f81380b5327c"
+      },
+      "source": [
+        "check_eve_odd(10000000000000002222445)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "奇数です！\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LTgP2sQnubTd",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 整数以外を入力した場合どうなる？"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7FikDUYNtlgw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def check_even_odd(number):\n",
+        "  if isinstance(number, int):\n",
+        "    if number % 2 == 0:\n",
+        "      print('偶数です！')\n",
+        "    else:\n",
+        "      print('奇数です！')\n",
+        "  else:\n",
+        "    print('整数値を入力してください')\n",
+        "  "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l2rDNTzfuHCV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "c4b15976-d83f-4812-f70b-c1d3cc438edb"
+      },
+      "source": [
+        "check_even_odd(4)"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "整数値を入力してください\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -639,13 +794,13 @@
       "source": [
         "# **プログラミングを体験しよう**\n",
         "\n",
-        "課題：コロナ禍におけるマーケターの重要性をアピールしよう\n",
+        "課題：コロナ禍でも存在感を発揮できるマーケターになるためには？\n",
         "\n",
         "- あなたはマーケターです\n",
         "- クライアントはチカホにあるコーヒー屋さんです\n",
         "- コーヒー屋の売上の5割は朝の通勤客によるもの\n",
         "- 新型コロナの影響で、緊急事態宣言が出された2月末から2週間後の月曜の売上が昨年比9割減\n",
-        "- 人の流れが減っただけなのか店側になにか問題があるのか確認したいので、**昨年同時期からどれくらい人の流れが減っているのか調べてほしい**\n",
+        "- 人の流れが減ったため売上が下がったことはわかっているが、果たしてそれだけが原因なのか、もしかすると店側にもなにか問題があるのか確認したいので、まずは**昨年同時期からどれくらい人の流れが減っているのか調べてほしい**\n",
         "- この人の流れが今後もしばらく続くとして**どうしたらお店が存続できるか具体的に提案して**ほしい\n",
         "\n"
       ]
