オブジェクト指向の章を修正

--- a/新人研修_プログラミングの基礎とデータの可視化.ipynb
+++ b/新人研修_プログラミングの基礎とデータの可視化.ipynb
@@ -6,9 +6,11 @@
       "name": "新人研修_プログラミングの基礎とデータの可視化.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "PHpkfRkxKoqm",
-        "_FIHBT5NLTZS",
-        "RaXPyJqhNW0Z"
+        "JxQkbvWs-8WP",
+        "SO5HtSmx6TlQ",
+        "Qa1TfJtBS3_S",
+        "pxqUH7lnr01-",
+        "LTgP2sQnubTd"
       ],
       "toc_visible": true,
       "include_colab_link": true
@@ -722,8 +724,30 @@
       },
       "source": [
         "# **オブジェクト指向**\n",
-        "●●\n",
-        "車を用いてオブジェクト指向を説明"
+        "\n",
+        "現実世界ではオブジェクトに囲まれて生活する。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "UrGw95eJJKIA"
+      },
+      "source": [
+        "## オブジェクトとは\n",
+        "- 目に見えて触れることができるモノ\n",
+        " - 家\n",
+        " - スマートフォン\n",
+        " - オフィス\n",
+        "- 概念的ではあるが具体的なモノ\n",
+        " - 30期の新入社員研修（「研修」は概念的なのでオブジェクトではない）\n",
+        " - 2020年5月の旅行（「旅行」も具体性が無い）\n",
+        "\n",
+        "## オブジェクト指向とは\n",
+        "[オブジェクト指向の基本がよ～くわかる本](https://www.amazon.co.jp/%E3%83%9D%E3%82%B1%E3%83%83%E3%83%88%E5%9B%B3%E8%A7%A3-%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E6%8C%87%E5%90%91%E3%81%AE%E5%9F%BA%E6%9C%AC%E3%81%8C%E3%82%88-%E3%81%8F%E3%82%8F%E3%81%8B%E3%82%8B%E6%9C%AC-%E8%B0%B7%E5%8F%A3-%E5%8A%9F/dp/479802628X)\n",
+        "\n",
+        "> オブジェクトを中心にした考え方であり、オブジェクトを中心に世界を捉え、オブジェクトに注目して物事を進めていくという思考方法\n"
       ]
     },
     {
@@ -733,8 +757,27 @@
         "colab_type": "text"
       },
       "source": [
-        "## **クラスとインスタンス**\n",
-        "ここへ説明"
+        "## **クラスとオブジェクト**\n",
+        "### クラス\n",
+        "具体的なモノだけで世界があふれないようにオブジェクトが抽象化されたもの（設計図のようなもの）\n",
+        "\n",
+        "例：\n",
+        "- 車\n",
+        "- 人間\n",
+        "- 魚\n",
+        "- 星\n",
+        "\n",
+        "\n",
+        "### オブジェクト\n",
+        "クラスから作成する具体的なモノ\n",
+        "\n",
+        "インスタンスとも言う\n",
+        "\n",
+        "例：\n",
+        "- 車クラス -> HONDA Fit\n",
+        "- 人間クラス -> ○○さん\n",
+        "- 魚クラス -> サーモン\n",
+        "- 星クラス -> リゲル"
       ]
     },
     {
@@ -745,12 +788,14 @@
         "colab": {}
       },
       "source": [
-        "class Human:\n",
-        "  def __init__(self, firstname, lastname, age, hobby):\n",
-        "    self.fisrtname = firstname\n",
-        "    self.lastname = lastname\n",
+        "class Person:\n",
+        "  def __init__(self, name, age):\n",
+        "    self.name = name\n",
         "    self.age = age\n",
-        "    self.hobby = hobby"
+        "  \n",
+        "  def selfIntroduction(self):\n",
+        "    print('Hello! My name is',self.name, \n",
+        "          'I am',self.age,'years old.')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -763,76 +808,8 @@
         "colab": {}
       },
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oVOAOh7_Qvg5",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "class Car:\n",
-        "  def __init__(self, name, haikiryou, company, color):\n",
-        "    self.name = name\n",
-        "    self.haikiryou = haikiryou\n",
-        "    self.company = company\n",
-        "    self.color = color\n",
-        "    self.speed = 0\n",
-        "  \n",
-        "  def start_engine(self, engine):\n",
-        "    self.engine = 'ON'\n",
-        "    return self.engine\n",
-        "\n",
-        "  def stop_engine(self, engine):\n",
-        "    self.engine = 'OFF'\n",
-        "    return self.engine\n",
-        "\n",
-        "  def accelerate(self, power):\n",
-        "    speed = self.speed\n",
-        "    if power > 0:\n",
-        "      speed += 10 * (self.haikiryou / 1000)\n",
-        "    elif power > 10:\n",
-        "      speed += 20\n",
-        "    else:\n",
-        "      speed += 50\n",
-        "    return speed\n",
-        "  \n",
-        "  def decelerate(self, power):\n",
-        "    speed = accelerate(power)\n",
-        "    if power > 0 and speed > 0:\n",
-        "      speed -= 10\n",
-        "    elif power > 10 and speed > 20:\n",
-        "      speed -= 20\n",
-        "    else:\n",
-        "      speed = 0\n",
-        "    return speed\n",
-        "\n",
-        "  def lightcontrol(switch):\n",
-        "    if switch == on:\n",
-        "      status = 'on'\n",
-        "    else:\n",
-        "      status = 'off'\n",
-        "    return status"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pVqCPgybTiad",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "v1 = Car('v1', 5000, 'tesla', 'black')\n",
-        "print(v1.accelerate(5))\n",
-        "print(v1.decelerate(1))"
+        "a = Person('Jun Kawaoka', 42)\n",
+        "a.selfIntroduction()"
       ],
       "execution_count": 0,
       "outputs": []
