研修前完成版

--- a/新人研修_プログラミングの基礎とデータの可視化.ipynb
+++ b/新人研修_プログラミングの基礎とデータの可視化.ipynb
@@ -202,25 +202,13 @@
       "metadata": {
         "id": "VNUgYyT3yo23",
         "colab_type": "code",
-        "outputId": "61fbff67-0ef3-496e-a6ec-2c21b307065b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+        "colab": {}
       },
       "source": [
         "print('FUSION is ' + fusion)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "FUSION is Marketing Company.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -724,8 +712,13 @@
       },
       "source": [
         "# **オブジェクト指向**\n",
+        "[オブジェクト指向とは](http://e-words.jp/w/%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E6%8C%87%E5%90%91.html#:~:text=%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E6%8C%87%E5%90%91%E3%81%A8%E3%81%AF%E3%80%81%E3%82%B3%E3%83%B3%E3%83%94%E3%83%A5%E3%83%BC%E3%82%BF,%E6%A7%8B%E7%AF%89%E3%81%97%E3%81%A6%E3%81%84%E3%81%8F%E6%89%8B%E6%B3%95%E3%80%82)\n",
         "\n",
-        "現実世界ではオブジェクトに囲まれて生活する。"
+        "> オブジェクト指向とは、コンピュータプログラムの設計や実装についての考え方の一つで、互いに密接に関連するデータと手続き（処理手順）をオブジェクト（object）と呼ばれる一つのまとまりとして定義し、様々なオブジェクトを組み合わせて関連性や相互作用を記述していくことによりシステム全体を構築していく手法。\n",
+        "\n",
+        "[オブジェクト指向の基本がよ～くわかる本](https://www.amazon.co.jp/%E3%83%9D%E3%82%B1%E3%83%83%E3%83%88%E5%9B%B3%E8%A7%A3-%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E6%8C%87%E5%90%91%E3%81%AE%E5%9F%BA%E6%9C%AC%E3%81%8C%E3%82%88-%E3%81%8F%E3%82%8F%E3%81%8B%E3%82%8B%E6%9C%AC-%E8%B0%B7%E5%8F%A3-%E5%8A%9F/dp/479802628X)\n",
+        "\n",
+        "> オブジェクトを中心にした考え方であり、オブジェクトを中心に世界を捉え、オブジェクトに注目して物事を進めていくという思考方法"
       ]
     },
     {
@@ -742,12 +735,7 @@
         " - オフィス\n",
         "- 概念的ではあるが具体的なモノ\n",
         " - 30期の新入社員研修（「研修」は概念的なのでオブジェクトではない）\n",
-        " - 2020年5月の旅行（「旅行」も具体性が無い）\n",
-        "\n",
-        "## オブジェクト指向とは\n",
-        "[オブジェクト指向の基本がよ～くわかる本](https://www.amazon.co.jp/%E3%83%9D%E3%82%B1%E3%83%83%E3%83%88%E5%9B%B3%E8%A7%A3-%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E6%8C%87%E5%90%91%E3%81%AE%E5%9F%BA%E6%9C%AC%E3%81%8C%E3%82%88-%E3%81%8F%E3%82%8F%E3%81%8B%E3%82%8B%E6%9C%AC-%E8%B0%B7%E5%8F%A3-%E5%8A%9F/dp/479802628X)\n",
-        "\n",
-        "> オブジェクトを中心にした考え方であり、オブジェクトを中心に世界を捉え、オブジェクトに注目して物事を進めていくという思考方法\n"
+        " - 2020年5月の旅行（「旅行」も具体性が無い）\n"
       ]
     },
     {
@@ -781,6 +769,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dlNXs16jRUOj",
+        "colab_type": "text"
+      },
+      "source": [
+        "### クラスからオブジェクトを作る\n",
+        "\n",
+        "人というクラスから自分というオブジェクトを作って自己紹介してみましょう"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "7NG7lFVxNqL5",
@@ -801,6 +801,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2eXMGqlmRy3S",
+        "colab_type": "text"
+      },
+      "source": [
+        "名前や年齢のようなオブジェクトが持つデータのことを**プロパティ**と言う。\n",
+        "\n",
+        "自己紹介のようなアクションのことを**メソッド**と言う。\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "d5rfuUO0uOFq",
@@ -808,8 +820,7 @@
         "colab": {}
       },
       "source": [
-        "a = Person('Jun Kawaoka', 42)\n",
-        "a.selfIntroduction()"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
@@ -821,9 +832,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **プログラミングを体験しよう**\n",
-        "\n",
-        "本日の課題：コロナ禍でも存在感を発揮できるマーケターになるために\n",
+        "# 課題：コロナ禍でも存在感を発揮できるマーケターになるために\n",
         "\n",
         "- あなたはマーケターです\n",
         "- クライアントはチカホにあるコーヒー屋さんです\n",
@@ -857,7 +866,19 @@
         "    - 昨年同時期と比べて売上が7割ほど低下していること\n",
         "    - チカホのコロナ前後における人流の量（比較グラフを貼り付け）\n",
         "  - 売上低下の要因（コロナの影響とそれ以外の面）（自分の推測を含める）\n",
-        "  - 人の流れは今後もしばらく続くとして売上を伸ばすための提案（2つ以上の施策を提案する）"
+        "  - 人の流れは今後もしばらく続くとして売上を伸ばすための提案（2つ以上の施策を提案する）\n",
+        "- 課題取り組み発表は6/15 15:00～です\n",
+        " - Google Colabで書いたプログラミングの内容とパワーポイントの提案書を用意してください。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Mzi6v16ISQyv",
+        "colab_type": "text"
+      },
+      "source": [
+        "## お題のプログラム"
       ]
     },
     {
@@ -865,7 +886,11 @@
       "metadata": {
         "id": "HJVWN8qStf5o",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 381
+        },
+        "outputId": "c329f5b3-f1c6-4b79-91e5-11554760236e"
       },
       "source": [
         "!pip install japanize-matplotlib\n",
@@ -873,8 +898,41 @@
         "import matplotlib.pyplot as plt\n",
         "import japanize_matplotlib"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting japanize-matplotlib\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/2c/aa/3b24d54bd02e25d63c8f23bb316694e1aad7ffdc07ba296e7c9be2f6837d/japanize-matplotlib-1.1.2.tar.gz (4.1MB)\n",
+            "\u001b[K     |████████████████████████████████| 4.1MB 9.1MB/s \n",
+            "\u001b[?25hRequirement already satisfied: matplotlib in /usr/local/lib/python3.6/dist-packages (from japanize-matplotlib) (3.2.1)\n",
+            "Requirement already satisfied: numpy>=1.11 in /usr/local/lib/python3.6/dist-packages (from matplotlib->japanize-matplotlib) (1.18.5)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib->japanize-matplotlib) (0.10.0)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->japanize-matplotlib) (2.4.7)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->japanize-matplotlib) (1.2.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->japanize-matplotlib) (2.8.1)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from cycler>=0.10->matplotlib->japanize-matplotlib) (1.12.0)\n",
+            "Building wheels for collected packages: japanize-matplotlib\n",
+            "  Building wheel for japanize-matplotlib (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for japanize-matplotlib: filename=japanize_matplotlib-1.1.2-cp36-none-any.whl size=4120191 sha256=fe4b87e614891f1fa1ba1fdf8e08c7c537fce93cc0f3a6d2554d7071bfaf80cf\n",
+            "  Stored in directory: /root/.cache/pip/wheels/9c/f9/fc/bc052ce743a03f94ccc7fda73d1d389ce98216c6ffaaf65afc\n",
+            "Successfully built japanize-matplotlib\n",
+            "Installing collected packages: japanize-matplotlib\n",
+            "Successfully installed japanize-matplotlib-1.1.2\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/japanize_matplotlib/japanize_matplotlib.py:15: MatplotlibDeprecationWarning: \n",
+            "The createFontList function was deprecated in Matplotlib 3.2 and will be removed two minor releases later. Use FontManager.addfont instead.\n",
+            "  font_list = font_manager.createFontList(font_files)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -887,9 +945,9 @@
         "# オープンデータをデータフレームへ格納する\n",
         "# データ参照先\n",
         "# https://ckan.pf-sapporo.jp/dataset/chikaho-jinryu\n",
-        "data_url1 = 'https://ckan.pf-sapporo.jp/dataset/224cede7-c57d-47d9-9279-23264058286e/resource/6f25d9c3-bd01-4430-96a0-03ac53b50ef4/download/sm201903.csv'\n",
+        "csv1 = 'https://ckan.pf-sapporo.jp/dataset/224cede7-c57d-47d9-9279-23264058286e/resource/6f25d9c3-bd01-4430-96a0-03ac53b50ef4/download/sm201903.csv'\n",
         "\n",
-        "df1 = pd.read_csv(data_url1, header=0,  names=('日時', '計測ポイント', '札幌から大通り', '大通りから札幌', '合計', '補正'))"
+        "df1 = pd.read_csv(csv1, header=0,  names=('日時', '計測ポイント', '札幌から大通り', '大通りから札幌', '合計', '補正'))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -903,7 +961,7 @@
       },
       "source": [
         "# 指定日・指定計測ポイントの人流をデータフレームへ格納する関数\n",
-        "def create_df1(place, date):\n",
+        "def create_data_frame1(place, date):\n",
         "  df_a = df1[df1['計測ポイント'] == place]\n",
         "  df_b = df_a[df_a['日時'].str.contains(date)]\n",
         "  return df_b"
@@ -921,21 +979,26 @@
       "source": [
         "# 人流を比較するグラフを表示する関数\n",
         "def display_graph(graphtitle, labelx, labely, targetdata, place, date1):\n",
+        "  # 縦軸横軸の値を格納する空のリスト\n",
         "  x1_value = []\n",
         "  y1_value = []\n",
         "\n",
+        "  # グラフサイズ、色、凡例のラベル\n",
         "  fig, ax = plt.subplots(figsize=(40,20))\n",
         "  c1 = \"blue\"\n",
         "  l1 = \"コロナ前: \" + date1  # 各ラベル\n",
         "\n",
-        "  data_frame1 = create_df1(place, date1)\n",
+        "  # データフレーム\n",
+        "  data_frame1 = create_data_frame1(place, date1)\n",
         "\n",
+        "  # データフレームの値を縦横軸のリストへ追記\n",
         "  i = 0 \n",
         "  for i in range(len(data_frame1)):\n",
         "    x1_value.append(str(data_frame1.iloc[i][\"日時\"])[10:16])\n",
         "    y1_value.append(data_frame1.iloc[i][targetdata])\n",
         "    i += 1\n",
         "\n",
+        "  # グラフ描画\n",
         "  fontsize = 30\n",
         "  ax.set_xlabel(labelx, fontsize=fontsize)  # x軸ラベル\n",
         "  ax.set_ylabel(labely, fontsize=fontsize)  # y軸ラベル\n",
@@ -954,16 +1017,16 @@
       "metadata": {
         "id": "cF4VQdF0QviP",
         "colab_type": "code",
-        "outputId": "b8acfce2-1eee-488c-f41a-26b52fdc53f0",
+        "outputId": "64ba9c8b-1166-4ef7-ae37-2a7576d48bd4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 826
+          "height": 676
         }
       },
       "source": [
         "display_graph('コロナ前後におけるチカホの人流', '時間', '人流', '合計', 'J4', '2019-03-11')"
       ],
-      "execution_count": 0,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
@@ -978,6 +1041,21 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "o3DkQzq9SbJx",
+        "colab_type": "text"
+      },
+      "source": [
+        "## ヒントなど\n",
+        "\n",
+        "- プログラムの**○○1**に注目しましょう\n",
+        "- 自分のGoogle colabでこのプログラムを開いて動かしてみましょう\n",
+        "- エラーになってもなんの影響もないので書いては直しを繰り返しましょう\n",
+        "- 質問あれば遠慮なく聞いてください"
       ]
     }
   ]
